# PyProjects

./: .gitignore  README.md  requirements.txt
Container/: container.go  container.py
Correlate/: Building a Performance Test with VS.docx  clean_lr.sh  correlate.py  mocking.py
Covid/: get_data  query.py
Db/: BeamPipeTest.py  RS.py  mongo.py  ms_sql.py  readme
Morse/: morse.py
ProtoBuf/: Addressbook.proto  Addressbook_pb2.py  app.py  foo.txt  make
Quantum/: Quantum.py  VectorMath.py  app.py  tests.py
Spark/: Spark_Setup
Testing/: DataDrivenTests.py  FontTest.py  Food.py  Samples  Test1.py  Test2.py  Test3.py  out  test_sample.py
benford/: IBM.csv  app.py  benford.py  covid.csv  covid.py
packaging_tutorial/: LICENSE  README.md  setup.cfg
packaging_tutorial/src/example_package/: example.py  harmonic_mean.py  time.sh
packaging_tutorial/src/tutorial_pkg_rvanderwall.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
packaging_tutorial/tutorial_pkg_rvanderwall.egg-info/: PKG-INFO
s3/: README  s3_ls.py
secretary/: secretary.py
snippets/: Focus_checker.py  app2Test.py  checkport.py  checkport2.py  decorators.py  gc.py  interfaces.py  jpeg.py  memory.py  meta.py  mocking.py  mocking2.py  numbers.py  path.py  private.py  run_test.sh  size.py  star.py  template.py  threads.py  typing.py
sound/: app_launch.py  readme  requirements.txt  sound1.py  speech2text.py  voices.sh
stats/: DataSrc.py  Quantizer.py  StatPack.py  anova.py  group.py  monte.py  ode.py  stock.csv
