[metadata]
name = tutorial-pkg-rvanderwall
version = 0.0.1
author = Robert Vanderwall
author_email = rvanderwall@yahoo.com
description = Tutorial on how to package python code.
long_description = file: README.md
long_description_content_type = text/markdown
url = htps://githb.com/rvanderwall/projects

license = MIT
license_files = LICENSE
classifiers = 
    License :: OSI_Approved :: MIT License

[options]
package_dir =
    =src
packages: find:

[options.packages.find]
where = src

